--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <app-nav-bar>
 </app-nav-bar>
 <!-- Container principal -->
-<app-container>
+<app-container [vaisseauList]="vaisseauList">
 </app-container>
+<router-outlet></router-outlet> 
 <!-- Pied de page -->
 <app-footer>  
 </app-footer>
