--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,7 @@
 <!-- Menu de naviguation -->
 <nav class="navbar navbar-dark primary-custom">
-    <h1 class="navbar-brand"><i class="fa fa-space-shuttle fa-2x"></i> API Star WARS </h1>
+    <a routerLink="" title="" routerLinkActive="active" ><h1 class="navbar-brand">
+    <i class="fa fa-space-shuttle fa-2x"></i> API Star WARS </h1></a>
     <div class="col-md-4">
       <!-- Champ de recherche  -->
       <div class="input-group">
