mise en place du menu
menu dans la nav et bare de recherche dans le conaitner

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,15 +2,12 @@
 <nav class="navbar navbar-dark primary-custom">
     <a routerLink="" title="" routerLinkActive="active" ><h1 class="navbar-brand">
     <i class="fa fa-space-shuttle fa-2x"></i> API Star WARS </h1></a>
-    <div class="col-md-4">
-      <!-- Champ de recherche  -->
-      <div class="input-group">
-        <input class="form-control py-2 border-right-0 border" placeholder="Rechercher de Vaisseau "type="search" >
-        <span class="input-group-append">
-          <div class="input-group-text"><i class="fa fa-search"></i></div>
-        </span>
-      </div>
-    </div>
+    <a class="nav-item nav-link" href="#">Peoples</a>
+    <a class="nav-item nav-link" href="#">Films</a>
+    <a class="nav-item nav-link" href="#">Startchips</a>
+    <a class="nav-item nav-link" href="#">Vehicles</a>
+    <a class="nav-item nav-link" href="#">Species</a>
+    <a class="nav-item nav-link" href="#">Planets</a>
     <div class="inline pull-right btngrp" style="inline-flex">
         <p>
             {{ now | date:'MMM d, y, h:mm:ss a'}}
