--- a/src/app/components/card/vaisseau-card/vaisseau-card.component.html
+++ b/src/app/components/card/vaisseau-card/vaisseau-card.component.html
@@ -2,7 +2,7 @@
 <h4 class="text-ellipsis">
   
   <ul class="col-sm-3" *ngFor="let pilote of pilotesUrl; let i = index">
-    <a routerLink="/piloteDetails/{{id}}" title="{{vaisseau.name}}" routerLinkActive="active" >Pilote - {{i}}</a>
+    <a routerLink="/people/{{id}}" title="{{vaisseau.name}}" routerLinkActive="active" >Pilote - {{i}}</a>
  </ul>
 
 </h4>
