--- a/src/app/components/pilote/pilote.component.html
+++ b/src/app/components/pilote/pilote.component.html
@@ -8,7 +8,7 @@
 </h4>
 <h4 *ngIf=" starshipsUrl" class="text-ellipsis">
    <ul class="col-sm-3" *ngFor="let startshipId of starshipsUrl; let i = index">
-      <a routerLink="/startships/{{startshipId}}"  routerLinkActive="active" > Vaisseau Numéro - {{startshipId}}</a>
+      <a routerLink="/vaisseau/{{startshipId}}"  routerLinkActive="active" > Vaisseau Numéro - {{startshipId}}</a>
    </ul>
 </h4>
  
