--- a/src/app/components/planet/planet.component.html
+++ b/src/app/components/planet/planet.component.html
@@ -1,1 +1,13 @@
 <p>planet works!</p>
+<p *ngIf="planet">{{planet.name}}</p>
+
+<h4 *ngIf="filmsUrl" class="text-ellipsis">
+  <ul class="col-sm-3" *ngFor="let filmId of filmsUrl; let i = index">
+      <a routerLink="/film/{{filmId}}" t routerLinkActive="active" > Film Numéro - {{filmId}}</a>
+   </ul>
+</h4>
+<h4 *ngIf="residentsUrl" class="text-ellipsis">
+   <ul class="col-sm-3" *ngFor="let residentId of residentsUrl; let i = index">
+      <a routerLink="/people/{{residentId }}"  routerLinkActive="active" > Residents number - {{residentId }}</a>
+   </ul>
+</h4>
