--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,3 +1,3 @@
-<div class="alert alert-info" role="info">
-    Aucun vaisseau Trouver 
-</div>
+<!-- Bar de naviguation -->
+<app-nav-bar>
+</app-nav-bar>
