--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
+<!-- Bar de naviguation -->
+<app-nav-bar>
+</app-nav-bar>
 <!-- Container principal -->
-<app-container [vaisseauList]="vaisseauList">
-</app-container>
+<div class="justify-content-center aligncenter">
 <router-outlet></router-outlet> 
+</div>
 <!-- Pied de page -->
 <app-footer>  
 </app-footer>
