--- a/src/app/components/card/vaisseau-card/vaisseau-card.component.css
+++ b/src/app/components/card/vaisseau-card/vaisseau-card.component.css
@@ -1,13 +1,9 @@
 img {
     width: 100%;
 }
-.card .card-title {
-    font-size: 15px;
-    font-weight: 300;
-}
 
-.text-ellipsis {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+ul {
+	display: inline !important;
+	list-style: none !important; 
+	margin: 0.1px !important;
 }
