--- a/src/app/components/card/vaisseau-card/vaisseau-card.component.html
+++ b/src/app/components/card/vaisseau-card/vaisseau-card.component.html
@@ -1,27 +1,20 @@
-<p  *ngIf="vaisseau" >{{vaisseau.name}}</p>
-<h4 class="text-ellipsis">
-  
-  <ul class="col-sm-3" *ngFor="let pilote of pilotesUrl; let i = index">
-    <a routerLink="/people/{{id}}" title="{{vaisseau.name}}" routerLinkActive="active" >Pilote - {{i}}</a>
- </ul>
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="../../../../assets/images/vaisseau.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{vaisseau.name}}</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <ul class="col-sm-6" *ngFor="let pilote of pilotesUrl; let i = index">
+      <a routerLink="/people/{{pilote}}" routerLinkActive="active" > P{{pilote}}</a>
+   </ul>
+  </ul>
+  <div class="card-body">
+    <ul class="col-sm-6" *ngFor="let film of filmsUrl; let i = index">
+      <a routerLink="/film/{{film}}" routerLinkActive="active" > F-{{film}}</a>
+   </ul>
+  </div>
+</div>
 
-</h4>
 
-<!-- <div class="thumbnail">
-    <img *ngIf="movie.poster_path" src="https://image.tmdb.org/t/p/w300/{{movie.poster_path}}" routerLink="/movie/{{movie.id}}" >
-    <img *ngIf="!movie.poster_path" src="../../../assets/abstract-image.jpg" routerLink="/movie/{{movie.id}}" >
-    <div class="caption">
-      <h4 class="text-ellipsis">
-        <a routerLink="/movie/{{movie.id}}" title="{{movie.title}}">{{movie.title}}</a>
-      </h4>
-      <p><strong>Date de parution: </strong>{{movie.release_date}}</p>
-      <p>
-        <a routerLink="/movie/{{movie.id}}">Détails &raquo;</a>
-        <small class="label label-success pull-right" *ngIf="movie.vote_average">
-          {{movie.vote_average}}
-          <i class="glyphicon glyphicon-star"></i>
-        </small>
-      </p>
-    </div>
-  </div> -->
   
