--- a/src/app/components/vaisseau/vaisseau.component.html
+++ b/src/app/components/vaisseau/vaisseau.component.html
@@ -1,3 +1,4 @@
+<div class="container align center">
 <p>vaisseau works!</p>
 <h1 *ngIf="vaisseau">{{vaisseau.name}}</h1>
 
@@ -11,3 +12,4 @@
         <a routerLink="/people/{{peopleId}}"  routerLinkActive="active" > People number - {{peopleId}}</a>
      </ul>
   </h4>
+<div>
