--- a/src/app/components/film/film.component.html
+++ b/src/app/components/film/film.component.html
@@ -1,32 +1,33 @@
-<p>film works!</p>
-<h1 *ngIf="film">{{film.title}}</h1>
-
-<!--<h4 *ngIf="peoplesUrl" class="text-ellipsis">
+<div class="card mb-3">
+   <img class="card-img-top" src="../../../assets/images/star-wars-22.jpg" alt="Card image cap">
+   <div class="card-body">
+     <h5 class="card-title">{{film.title}}</h5>
+     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+   </div>
+ </div>
+<h4 *ngIf="peoplesUrl" class="text-ellipsis">
     <ul class="col-sm-3" *ngFor="let peopleId of peoplesUrl; let i = index">
-        <a routerLink="/people/{{peopleId}}" routerLinkActive="active" > People Numero - {{peopleId}}</a>
+        <a routerLink="/people/{{peopleId}}" routerLinkActive="active" > P-{{peopleId}}</a>
      </ul>
-  </h4>-->
-  <!--<h4 *ngIf="starshipsUrl" class="text-ellipsis">
+  </h4>
+  <h4 *ngIf="starshipsUrl" class="text-ellipsis">
      <ul class="col-sm-3" *ngFor="let startshipId of starshipsUrl; let i = index">
-        <a routerLink="/vaisseau/{{startshipId}}"  routerLinkActive="active" > Vaisseau Numéro - {{startshipId}}</a>
+        <a routerLink="/vaisseau/{{startshipId}}"  routerLinkActive="active" > S- {{startshipId}}</a>
      </ul>
-  </h4>-->
-
-  <!--<h4 *ngIf="vehiclesUrl" class="text-ellipsis">
+  </h4>
+  <h4 *ngIf="vehiclesUrl" class="text-ellipsis">
     <ul class="col-sm-3" *ngFor="let vehicleId of vehiclesUrl; let i = index">
-       <a routerLink="/vehicle/{{vehicleId}}"  routerLinkActive="active" > Véhicule Numéro - {{vehicleId}}</a>
+       <a routerLink="/vehicle/{{vehicleId}}"  routerLinkActive="active" > V-{{vehicleId}}</a>
     </ul>
- </h4>-->
-
+   </h4>
  <h4 *ngIf="speciesUrl" class="text-ellipsis">
    <ul class="col-sm-3" *ngFor="let specieId of speciesUrl; let i = index">
-      <a routerLink="/specie/{{specieId}}"  routerLinkActive="active" > Species Number - {{specieId}}</a>
+      <a routerLink="/specie/{{specieId}}"  routerLinkActive="active" > S-{{specieId}}</a>
    </ul>
 </h4>
-
-<h4 *ngIf="planetsUrl" class="text-ellipsis">
+ <h4 *ngIf="planetsUrl" class="text-ellipsis">
    <ul class="col-sm-3" *ngFor="let planetId of planetsUrl; let i = index">
-      <a routerLink="/planet/{{planetId}}"  routerLinkActive="active" > Planet Number - {{specieId}}</a>
+      <a routerLink="/planet/{{planetId}}"  routerLinkActive="active" > P-{{planetId}}</a>
    </ul>
 </h4>
-
