--- a/src/app/components/card/vaisseau-card/vaisseau-card.component.css
+++ b/src/app/components/card/vaisseau-card/vaisseau-card.component.css
@@ -7,3 +7,11 @@ ul {
 	list-style: none !important; 
 	margin: 0.1px !important;
 }
+
+a{
+    text-decoration: none !important;
+	font-size: 10px !important;
+	color:red;
+}
+  
+
