--- a/src/app/components/film/film.component.html
+++ b/src/app/components/film/film.component.html
@@ -1,3 +1,4 @@
+<div class="container align center">
 <div class="card mb-3">
    <img class="card-img-top" src="../../../assets/images/star-wars-22.jpg" alt="Card image cap">
    <div class="card-body">
@@ -31,3 +32,4 @@
       <a routerLink="/planet/{{planetId}}"  routerLinkActive="active" > P-{{planetId}}</a>
    </ul>
 </h4>
+</div>
