--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
 <!-- Menu de naviguation -->
 <nav class="navbar navbar-dark primary-custom">
     <a routerLink="" title="" routerLinkActive="active" ><h1 class="navbar-brand">
-    <i class="fa fa-space-shuttle fa-2x"></i> API Star WARS </h1></a>
+    <i class="fa fa-space-shuttle fa-2x"></i>  API  * Star WARS * </h1></a>
     <div class="inline pull-right btngrp" style="inline-flex">
         <p>
             {{ now | date:'MMM d, y, h:mm:ss a'}}
-        </p>
+        </p> 
     </div>
   </nav>
