--- a/src/app/components/planet/planet.component.html
+++ b/src/app/components/planet/planet.component.html
@@ -1,3 +1,4 @@
+<div class="container align center">
 <div class="card bg-dark text-white">
    <img class="card-img" src="../../../assets/images/planet.png" alt="Card image">
    <div class="card-img-overlay">
@@ -16,4 +17,5 @@
        </ul>
     </h4>
    </div>
+ </div>
  </div>
