--- a/src/app/components/specie/specie.component.html
+++ b/src/app/components/specie/specie.component.html
@@ -1,19 +1,19 @@
+<div class="container align center">
 <div class="card">
-   <h5 class="card-header">{{specie.name}}</h5>
+   <img class="card-img-top" src="../../../assets/images/species.jpeg" alt="Card image cap">
+   <h1 class="card-header">{{specie.name}}</h1>
    <div class="card-body">
      <h5 class="card-title">Special title treatment</h5>
      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-     <h4 *ngIf="filmsUrl" class="text-ellipsis">
+     <hr>
       <ul class="col-sm-3" *ngFor="let filmId of filmsUrl; let i = index">
-          <a routerLink="/film/{{filmId}}" t routerLinkActive="active" > F-{{filmId}}</a>
+          <a routerLink="/film/{{filmId}}" t routerLinkActive="active" > Moovie -{{filmId}}</a>
        </ul>
-    </h4>
-    <br>
-    <h4 *ngIf="peoplesUrl" class="text-ellipsis">
+    <hr>
        <ul class="col-sm-3" *ngFor="let peopleId of peoplesUrl; let i = index">
-          <a routerLink="/people/{{peopleId}}"  routerLinkActive="active" > P-{{peopleId}}</a>
+          <a routerLink="/people/{{peopleId}}"  routerLinkActive="active" > Pilot -{{peopleId}}</a>
        </ul>
-    </h4>
    </div>
  </div>
+</div>
  
