--- a/src/app/components/planet/planet.component.css
+++ b/src/app/components/planet/planet.component.css
@@ -3,3 +3,8 @@ ul {
 	list-style: none !important; 
 	margin: 1px !important;
 }
+a{
+    text-decoration: none !important;
+	font-size: 13px !important;
+	color:red;
+}
